# echomusicplayer

./: .gitignore  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/src/: lib.rs  main.rs  schema.sql
src/app/: App.tsx  styles.css
src/features/now-playing/: NowPlayingPanel.tsx
src/features/player/: PlayerBar.tsx
src/features/playlists/: PlaylistsView.tsx
src/features/settings/: SettingsView.tsx
src/hooks/: useAudioEngine.ts
src/lib/: tauri.ts
src/store/: libraryStore.ts  playerStore.ts
src/types/: models.ts
