[package]
name = "echo"
version = "0.1.0"
description = "Echo local music player"
authors = ["Echo"]
edition = "2021"

[lib]
name = "echo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
walkdir = "2"
lofty = "0.21"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = "7"
tauri-plugin-fs = "2"

